--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,17 +7,6 @@
   <br>
 
 <ion-item lines="none">
-  <ion-avatar slot="start"><img src="https://pixomatic.us/blog/wp-content/uploads/2019/11/pixomatic_1572877223091.png" alt=""></ion-avatar>
-<ion-label>
-  <h2>Daniel</h2>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-</ion-label>
-<p>12:54</p>
-</ion-item>
-
-<br>
-
-<ion-item lines="none">
   <ion-avatar><img src="https://peaklife.in/wp-content/uploads/2019/06/elon-musk-image.jpg" alt=""></ion-avatar>
 <ion-label>
     <h2>Elon Musk</h2>
@@ -58,7 +47,19 @@
   </ion-label>
   <p>12:25</p>
 </ion-item>
+  
+ <br>
 
+ <ion-item lines="none">
+  <ion-avatar><img src="https://www.thestatesman.com/wp-content/uploads/2020/05/QT-Family-Values.jpg" alt=""></ion-avatar>
+  <ion-label>
+    <h2>Family</h2>
+    <p id="para">Lorem ipsum dolor sit amet consectetur.</p>
+  </ion-label>
+  <p>12:25</p>
+</ion-item>
+  
+  
 <ion-fab vertical="bottom" horizontal="end" slot="fixed">
   <ion-fab-button>
     <ion-icon name="add"></ion-icon>
