--- a/src/app/Page2/page2.page.html
+++ b/src/app/Page2/page2.page.html
@@ -1,1 +1,71 @@
 
+
+<ion-content>
+  <ion-item id="item1" lines="none">
+    <ion-buttons slot="start" >
+      <ion-icon name="chevron-back-outline"></ion-icon>
+    </ion-buttons>
+
+    <ion-avatar id="header-avatar"><img src="https://www.thestatesman.com/wp-content/uploads/2020/05/QT-Family-Values.jpg" alt=""></ion-avatar>
+    <ion-label>
+      <h2>College group</h2>
+      <p>4 active now</p>
+    </ion-label>
+    <ion-icon name="calendar-clear-outline"></ion-icon>
+
+   </ion-item>
+
+   <div class="chat-list">
+     <ion-item id="item2" lines="none">
+    <ion-avatar><img src="https://adamlowecreative.com/wp-content/uploads/2017/02/Handsome-Man-White-Background-600x600.jpg" alt=""></ion-avatar>
+    <div class="talk-bubble tri-right round right-in">
+      <div class="talktext">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, at?</p>
+      </div>
+    </div>
+    <p id="time" >12:40</p>
+  </ion-item>
+
+
+  <ion-item id="my-text" lines="none">
+    <div >
+      <p id="time" >12:40</p>
+    </div>
+    <div id="my-talk-bubble">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    </div>
+
+  </ion-item>
+
+
+  <ion-item id="item2" lines="none">
+    <ion-avatar><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvlCUU4LxeKhsQiyAcKGKSKWextRNEsmw7tw&usqp=CAU" alt=""></ion-avatar>
+    <div class="talk-bubble tri-right round right-in">
+      <div class="talktext">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </div>
+    <p id="time" >12:48</p>
+  </ion-item>
+
+  <ion-item id="item2" lines="none">
+    <ion-avatar><img src="https://peaklife.in/wp-content/uploads/2019/06/elon-musk-image.jpg" alt=""></ion-avatar>
+    <div class="talk-bubble tri-right round right-in">
+      <div class="talktext">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </div>
+    <p id="time" >12:56</p>
+  </ion-item>
+
+  <ion-item id="input-items">
+    <ion-icon name="attach"></ion-icon>
+    <ion-input placeholder="Type a message..."></ion-input>
+    <ion-icon name="send" slot="end"></ion-icon>
+  </ion-item>
+   </div>
+
+
+</ion-content >
+
+
