--- a/src/app/Page2/page2.page.html
+++ b/src/app/Page2/page2.page.html
@@ -1,7 +1,7 @@
 
 
 <ion-content>
-  <ion-item id="item1" lines="none">
+  <ion-item id="header-item" lines="none">
     <ion-buttons slot="start" >
       <ion-icon name="chevron-back-outline"></ion-icon>
     </ion-buttons>
@@ -16,7 +16,7 @@
    </ion-item>
 
    <div class="chat-list">
-     <ion-item id="item2" lines="none">
+     <ion-item id="item1" lines="none">
     <ion-avatar><img src="https://adamlowecreative.com/wp-content/uploads/2017/02/Handsome-Man-White-Background-600x600.jpg" alt=""></ion-avatar>
     <div class="talk-bubble tri-right round right-in">
       <div class="talktext">
@@ -67,5 +67,6 @@
 
 
 </ion-content >
+
 
 
